Enhance tags to allow list of strings as value, add tags to webhooks and filter objects by tags

--- a/template.yaml
+++ b/template.yaml
@@ -1507,6 +1507,13 @@ Resources:
                 - dynamodb:GetItem
               Resource:
                 - !GetAtt FlowStorageTable.Arn
+            - Effect: Allow
+              Action:
+                - neptune-db:ReadDataViaQuery
+              Resource: !Sub arn:${AWS::Partition}:neptune-db:${AWS::Region}:${AWS::AccountId}:${NeptuneStack.Outputs.ClusterResourceId}/*
+              Condition:
+                StringEquals:
+                  neptune-db:QueryLanguage: OpenCypher
       Events:
         headMediaObjectInformation:
           Type: Api
