--- a/storage_backend.yaml
+++ b/storage_backend.yaml
@@ -57,6 +57,8 @@ Resources:
       Roles:
         - !ImportValue
             Fn::Sub: ${ApiStackName}-AdditionalStorage-FlowsFunctionRole
+        - !ImportValue
+            Fn::Sub: ${ApiStackName}-AdditionalStorage-ObjectDuplicationFunctionRole
       PolicyName: !Sub ${AWS::StackName}-PutObject
       PolicyDocument:
         Version: "2012-10-17"
@@ -77,6 +79,8 @@ Resources:
             Fn::Sub: ${ApiStackName}-AdditionalStorage-ObjectsFunctionRole
         - !ImportValue
             Fn::Sub: ${ApiStackName}-AdditionalStorage-WebhooksFunctionRole
+        - !ImportValue
+            Fn::Sub: ${ApiStackName}-AdditionalStorage-ObjectDuplicationFunctionRole
       PolicyName: !Sub ${AWS::StackName}-GetObject
       PolicyDocument:
         Version: "2012-10-17"
