--- a/template.yaml
+++ b/template.yaml
@@ -1413,6 +1413,7 @@ Resources:
             - Effect: Allow
               Action:
                 - dynamodb:GetItem
+                - dynamodb:PutItem
                 - dynamodb:UpdateItem
               Resource:
                 - !GetAtt FlowStorageTable.Arn
@@ -1509,9 +1510,11 @@ Resources:
           POWERTOOLS_SERVICE_NAME: tams-segments
           POWERTOOLS_METRICS_NAMESPACE: TAMS
           NEPTUNE_ENDPOINT: !GetAtt NeptuneStack.Outputs.Endpoint
+          SERVICE_TABLE: !Ref ServiceTable
           SEGMENTS_TABLE: !Ref FlowSegmentsTable
           STORAGE_TABLE: !Ref FlowStorageTable
           DUPLICATION_QUEUE_URL: !Ref ObjectDuplicationQueue
+          S3_QUEUE_URL: !Ref CleanupS3Queue
       Policies:
         - Version: "2012-10-17"
           Statement:
@@ -1523,13 +1526,26 @@ Resources:
             - Effect: Allow
               Action:
                 - dynamodb:GetItem
+                - dynamodb:UpdateItem
+              Resource:
+                - !GetAtt FlowSegmentsTable.Arn
+            - Effect: Allow
+              Action:
+                - dynamodb:GetItem
               Resource:
                 - !GetAtt FlowStorageTable.Arn
+            - Effect: Allow
+              Action:
+                - dynamodb:Query
+                - dynamodb:GetItem
+              Resource:
+                - !GetAtt ServiceTable.Arn
             - Effect: Allow
               Action:
                 - sqs:SendMessage
               Resource:
                 - !GetAtt ObjectDuplicationQueue.Arn
+                - !GetAtt CleanupS3Queue.Arn
             - Effect: Allow
               Action:
                 - neptune-db:ReadDataViaQuery
@@ -1560,6 +1576,28 @@ Resources:
               AuthorizationScopes:
                 - !FindInMap [OAuth, Scopes, CognitoAdmin]
                 - !FindInMap [OAuth, Scopes, Get]
+        postMediaObjectInstance:
+          Type: Api
+          Properties:
+            RestApiId: !Ref Api
+            Path: /objects/{objectId}/instances
+            Method: Post
+            Auth:
+              Authorizer: Authorizor
+              AuthorizationScopes:
+                - !FindInMap [OAuth, Scopes, CognitoAdmin]
+                - !FindInMap [OAuth, Scopes, Post]
+        deleteMediaObjectInstance:
+          Type: Api
+          Properties:
+            RestApiId: !Ref Api
+            Path: /objects/{objectId}/instances
+            Method: Delete
+            Auth:
+              Authorizer: Authorizor
+              AuthorizationScopes:
+                - !FindInMap [OAuth, Scopes, CognitoAdmin]
+                - !FindInMap [OAuth, Scopes, Delete]
 
   FlowDeleteRequestsFunction:
     Type: AWS::Serverless::Function
@@ -1936,6 +1974,7 @@ Resources:
             - Effect: Allow
               Action:
                 - dynamodb:GetItem
+                - dynamodb:UpdateItem
                 - dynamodb:DeleteItem
               Resource:
                 - !GetAtt FlowStorageTable.Arn
