--- a/upgrades/4.1_5.0/tams-4.1-5.0-upgrade-template.yaml
+++ b/upgrades/4.1_5.0/tams-4.1-5.0-upgrade-template.yaml
@@ -18,30 +18,22 @@ Metadata:
           - OldStorageTableName
           - NewStorageTableName
     ParameterLabels:
-
-  LambdaSecurityGroup:
-    default: The LambdaSecurityGroup Output from the TAMS API CloudFormation Stack
-
-  LambdaSubnetIds:
-    default: The LambdaSubnetIds Output from the TAMS API CloudFormation Stack
-
-  NeptuneClusterResourceId:
-    defult: The NeptuneClusterResourceId Output from the TAMS API CloudFormation Stack
-
-  NeptuneEndpoint:
-    default: The NeptuneEndpoint Output from the TAMS API CloudFormation Stack
-
-  UtilsLayerArn:
-    default: The UtilsLayerArn Output from the TAMS API CloudFormation Stack
-
-  WebhooksTableName:
-    default: The name of the DynamoDB table for Webhooks
-
-  OldStorageTableName:
-    default: The name of the OLD DynamoDB table for FlowStorage. The Old Table has the flow_id as the sort key
-
-  NewStorageTableName:
-    default: The name of the NEW DynamoDB table for FlowStorage. The New Table does not have a sort key
+      LambdaSecurityGroup:
+        default: The LambdaSecurityGroup Output from the TAMS API CloudFormation Stack
+      LambdaSubnetIds:
+        default: The LambdaSubnetIds Output from the TAMS API CloudFormation Stack
+      NeptuneClusterResourceId:
+        default: The NeptuneClusterResourceId Output from the TAMS API CloudFormation Stack
+      NeptuneEndpoint:
+        default: The NeptuneEndpoint Output from the TAMS API CloudFormation Stack
+      UtilsLayerArn:
+        default: The UtilsLayerArn Output from the TAMS API CloudFormation Stack
+      WebhooksTableName:
+        default: The name of the DynamoDB table for Webhooks
+      OldStorageTableName:
+        default: The name of the OLD DynamoDB table for FlowStorage. The Old Table has the flow_id as the sort key
+      NewStorageTableName:
+        default: The name of the NEW DynamoDB table for FlowStorage. The New Table does not have a sort key
 
 Parameters:
   LambdaSecurityGroup:
@@ -148,10 +140,13 @@ Resources:
             # Need to scan all items into memory so that we can then group them correctly for the amended structure used in Neptune
             scan = webhooks_table.scan()
             items = scan["Items"]
+            print(f"Read {len(items)} records from the DynamoDB Table...")
             while "LastEvaluatedKey" in scan:
                 scan = webhooks_table.scan(ExclusiveStartKey=scan["LastEvaluatedKey"])
                 items.extend(scan["Items"])
+                print(f'Read a further {len(scan["Items"])} records from the DynamoDB Table...')
             webhooks_dict = {}
+            print(f"A total of {len(items)} records read from the DynamoDB Table...")
             for item in items:
                 event = item.pop("event")
                 if item["url"] in webhooks_dict:
@@ -162,38 +157,58 @@ Resources:
                 webhook_dict["id"] = str(uuid.uuid4())
                 webhook_dict["status"] = "created"
                 merge_webhook(webhook_dict, None)
+            print(f"Wrote {len(webhooks_dict)} Webhooks to the Neptune database.")
+            print("SUCCESS - WebHooks ETL process completed successfully.")
 
 
         def storage_etl(context, last_evaluated_key=None):
             args = {}
             if last_evaluated_key:
                 args["ExclusiveStartKey"] = last_evaluated_key
+                print(
+                    "LastEvaluatedKey supplied, resuming from previous scan of the OLD DynamoDB table..."
+                )
+            else:
+                print(
+                    "No LastEvaluatedKey supplied, starting a fresh scan of the OLD DynamoDB table..."
+                )
             with new_storage_table.batch_writer() as batch:
                 scan = old_storage_table.scan(**args)
+                print(f'Read {len(scan["Items"])} records from the OLD DynamoDB Table...')
                 for item in scan["Items"]:
                     batch.put_item(Item=transform_storage_item(item))
+                print(f'Wrote {len(scan["Items"])} new records to the NEW DynamoDB Table...')
                 while (
                     "LastEvaluatedKey" in scan
                     and context.get_remaining_time_in_millis() > constants.LAMBDA_TIME_REMAINING
                 ):
                     args["ExclusiveStartKey"] = scan["LastEvaluatedKey"]
                     scan = old_storage_table.scan(**args)
+                    print(f'Read {len(scan["Items"])} records from the OLD DynamoDB Table...')
                     for item in scan["Items"]:
                         batch.put_item(Item=transform_storage_item(item))
+                    print(
+                        f'Wrote {len(scan["Items"])} new records to the NEW DynamoDB Table...'
+                    )
                 if "LastEvaluatedKey" in scan:
                     print(
-                        "Lambda timed out before all items were processed, restart the ETL using the following last_evaluated_key value..."
+                        "PARTIAL - Lambda timed out before all items were processed, restart the ETL using the following last_evaluated_key value..."
                     )
                     print("last_evaluated_key: ", scan["LastEvaluatedKey"])
+                else:
+                    print("SUCCESS - Storage ETL process completed successfully.")
 
 
         def tags_etl(context):
             query = "MATCH (n:tags) WITH n, [prop IN keys(n) WHERE NOT (n[prop] STARTS WITH '\"' OR n[prop] STARTS WITH '[')] AS valid_props WHERE size(valid_props) > 0 RETURN n.`~id` AS node_id, valid_props"
             results = execute_open_cypher_query(query)
+            print(
+                f'Read {len(results["results"])} non-serialised tag values from the Neptune database...'
+            )
             for result in results["results"]:
                 if context.get_remaining_time_in_millis() <= constants.LAMBDA_TIME_REMAINING:
                     print(
-                        "Lambda timed out before all items were processed, re-run the tags_etl to continue"
+                        "PARTIAL - Lambda timed out before all items were processed, re-run the tags_etl to continue"
                     )
                     return
                 set_clauses = ", ".join(
@@ -201,12 +216,20 @@ Resources:
                 )
                 set_query = f'MATCH (n:tags {{`~id`: "{result["node_id"]}"}}) SET {set_clauses} RETURN n'
                 execute_open_cypher_query(set_query)
+            print(
+                f'Updated {len(results["results"])} serialised tag values in the Neptune database...'
+            )
+            print("SUCCESS - Tags ETL process completed successfully.")
 
 
         # pylint: disable=unused-argument
         def lambda_handler(event, context):
-            # Uncomment only one of following lines at a time so that each ETL process runs in a single execution isolated on it's own
-
-            # webhooks_etl()
-            # storage_etl(context)
-            # tags_etl(context)
+            # Update the value of the etl_step variable to run each etl process in turn.
+            etl_step = ""
+            match etl_step:
+                case "webhooks":
+                    webhooks_etl()
+                case "storage":
+                    storage_etl(context)
+                case "tags":
+                    tags_etl(context)
